unpackaged/main/default/objects/Clinical_Trial__c/Clinical_Trial__c.object-meta.xml
<CustomObject>
    <label>Clinical Trial</label>
    <nameField>
        <displayFormat>CTID-{0000}</displayFormat>
        <label>Clinical Trial ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Trials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>