unpackaged/main/default/objects/Clinical_Trial__c/fields/Brief_Title__c.field-meta.xml
<CustomField>
    <fullName>Brief_Title__c</fullName>
    <label>Brief Title</label>
    <type>TextArea</type>
</CustomField>