unpackaged/main/default/objects/Clinical_Trial__c/fields/Clinical_Trial_Description_Brief__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Description_Brief__c</fullName>
    <label>Clinical Trial Description Brief</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>