unpackaged/main/default/objects/Clinical_Trial__c/fields/Clinical_Trial_Description_Detailed__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Description_Detailed__c</fullName>
    <label>Clinical Trial Description Detailed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>