unpackaged/main/default/objects/Clinical_Trial__c/fields/Clinical_Trial_Status__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Status__c</fullName>
    <label>Clinical Trial Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>