unpackaged/main/default/objects/Clinical_Trial__c/fields/Clinical_Trial_Type__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Type__c</fullName>
    <label>Clinical Trial Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intervention</fullName>
            </value>
            <value>
                <fullName>Observational</fullName>
            </value>
            <value>
                <fullName>Patient Registry</fullName>
            </value>
            <value>
                <fullName>Expanded Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>