unpackaged/main/default/objects/Clinical_Trial__c/fields/ClinicalTrials_gov_Link__c.field-meta.xml
<CustomField>
    <fullName>ClinicalTrials_gov_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://clinicaltrials.gov/ct2/show/&apos; &amp;  NCTId__c , &apos;Link to &apos; &amp; NCTId__c , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ClinicalTrials.gov Link</label>
    <type>Text</type>
</CustomField>