unpackaged/main/default/objects/Clinical_Trial__c/fields/Contains_Advanced_Condition_s__c.field-meta.xml
<CustomField>
    <fullName>Contains_Advanced_Condition_s__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked by Process Builder when a Clinical Trial Condition is added with the Flag of &quot;Advanced Condition&quot;</description>
    <label>Contains Advanced Condition(s)</label>
    <type>Checkbox</type>
</CustomField>