unpackaged/main/default/objects/Clinical_Trial__c/fields/Count_of_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Conditions__c</fullName>
    <label>Count of Conditions</label>
    <summaryForeignKey>Clinical_Trial_Condition__c.Clinical_Trial__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>