unpackaged/main/default/objects/Clinical_Trial__c/fields/Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Criteria__c</fullName>
    <label>Eligibility Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>