unpackaged/main/default/objects/Clinical_Trial__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <label>Enrollment</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>