unpackaged/main/default/objects/Clinical_Trial__c/fields/Group_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Group_Assignment__c</fullName>
    <label>Group Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Randomized</fullName>
            </value>
            <value>
                <fullName>Nonrandomized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>