unpackaged/main/default/objects/Clinical_Trial__c/fields/Healthy_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Healthy_Volunteers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Healthy Volunteers</label>
    <type>Checkbox</type>
</CustomField>