unpackaged/main/default/objects/Clinical_Trial__c/fields/Maximum_Age__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Age__c</fullName>
    <label>Maximum Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>