unpackaged/main/default/objects/Clinical_Trial__c/fields/NCTId__c.field-meta.xml
<CustomField>
    <fullName>NCTId__c</fullName>
    <externalId>true</externalId>
    <label>NCTId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>