unpackaged/main/default/objects/Clinical_Trial__c/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <label>Number of Locations</label>
    <summaryForeignKey>Clinical_Trial_Location__c.Clinical_Trial__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>