unpackaged/main/default/objects/Clinical_Trial__c/fields/Official_Title__c.field-meta.xml
<CustomField>
    <fullName>Official_Title__c</fullName>
    <label>Official Title</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>