unpackaged/main/default/objects/Clinical_Trial__c/fields/OrgStudyId__c.field-meta.xml
<CustomField>
    <fullName>OrgStudyId__c</fullName>
    <label>OrgStudyId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>