unpackaged/main/default/objects/Clinical_Trial__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Early Phase 1;</fullName>
            </value>
            <value>
                <fullName>Phase 1;</fullName>
            </value>
            <value>
                <fullName>Phase 2;</fullName>
            </value>
            <value>
                <fullName>Phase 3;</fullName>
            </value>
            <value>
                <fullName>N/A;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>