unpackaged/main/default/objects/Clinical_Trial__c/fields/Readable_Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>Readable_Brief_Description__c</fullName>
    <label>Readable Brief Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>