unpackaged/main/default/objects/Clinical_Trial__c/fields/Readable_Eligibility_Summary__c.field-meta.xml
<CustomField>
    <fullName>Readable_Eligibility_Summary__c</fullName>
    <label>Readable Eligibility Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>