unpackaged/main/default/objects/Clinical_Trial__c/fields/Readable_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Readable_Enrollment__c</fullName>
    <formula>IF ( ISBLANK( Enrollment__c ) , &quot;There is no enrollment information available.&quot;,

IF( TEXT(Enrollment_Type__c)= &quot;Actual&quot; , &quot;There are &quot; &amp;  TEXT(Enrollment__c) &amp; &quot; patients currently enrolled&quot;, &quot;This Trial is enrolling &quot; &amp; TEXT(Enrollment__c) &amp; &quot; patients&quot;)

)</formula>
    <label>Readable Enrollment</label>
    <type>Text</type>
</CustomField>