unpackaged/main/default/objects/Clinical_Trial__c/fields/Readable_Title__c.field-meta.xml
<CustomField>
    <fullName>Readable_Title__c</fullName>
    <description>A handwritten, readable title - easier for Patients to understand than the ClinicalTrials.gov brief title.</description>
    <label>Readable Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>