unpackaged/main/default/objects/Clinical_Trial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NCTId__c</columns>
    <columns>OrgStudyId__c</columns>
    <columns>Brief_Title__c</columns>
    <columns>Clinical_Trial_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>