unpackaged/main/default/objects/Clinical_Trial__c/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <columns>NAME</columns>
    <columns>NCTId__c</columns>
    <columns>OrgStudyId__c</columns>
    <columns>Brief_Title__c</columns>
    <columns>Clinical_Trial_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Clinical_Trial_Status__c</field>
        <operation>equals</operation>
        <value>Recruiting,Unknown Status</value>
    </filters>
    <label>All Recruiting and Unknown</label>
</ListView>