unpackaged/main/default/objects/Clinical_Trial__c/listViews/All_Exclusion_Criteria.listView-meta.xml
<ListView>
    <fullName>All_Exclusion_Criteria</fullName>
    <columns>NAME</columns>
    <columns>NCTId__c</columns>
    <columns>Brief_Title__c</columns>
    <columns>Eligibility_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Clinical_Trial_Status__c</field>
        <operation>equals</operation>
        <value>Not yet recruiting,Recruiting,Enrolling by invitation,&quot;Active, not recruiting&quot;</value>
    </filters>
    <label>All Exclusion Criteria</label>
</ListView>